--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ authors = ["Rayr"]
 [dependencies]
 reqwest = "0.11.7"
 tokio = { version = "1", features = ["full"] }
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
